src/main/resources/service-config.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "nginx-1-service"
  namespace: "default"
  labels:
    app: "nginx-1"
spec:
  ports:
  - protocol: "TCP"
    name: "ui"
    port: 3200
    targetPort: 80
  - protocol: "TCP"
    name: backend
    port: 3300
    targetPort: 8080
  selector:
    app: "nginx-1"
  type: "ClusterIP"
