src/main/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    spec.ingressClassName: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-1-service
            port:
              number: 3200
      - path: /pdf/files/api
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-1-service
            port:
              number: 3300
